--- a/mania/medmania-modern.html
+++ b/mania/medmania-modern.html
@@ -521,9 +521,15 @@
 
             articlesGrid.innerHTML = filteredArticles.map(article => `
                 <div class="article-card" onclick="openArticle('${article.id}')">
-                    <div class="article-image" style="background-image: url('${article.imageUrl || '/icon/fatomania.png'}')">
-                        <div class="article-category">${getCategoryIcon(article.category)} ${article.category}</div>
-                    </div>
+                    ${article.imageUrl ? `
+                        <div class="article-image" style="background-image: url('${article.imageUrl}')">
+                            <span class="article-category">${getCategoryIcon(article.category)} ${article.category}</span>
+                        </div>
+                    ` : `
+                        <div class="article-image" style="background: linear-gradient(135deg, var(--destaque) 0%, var(--azul-medico) 100%);">
+                            <span class="article-category">${getCategoryIcon(article.category)} ${article.category}</span>
+                        </div>
+                    `}
                     <div class="article-content">
                         <h3 class="article-title">${article.title}</h3>
                         <p class="article-summary">${article.summary}</p>
@@ -612,7 +618,6 @@
 
         window.openArticle = function(articleId) {
             console.log('Opening article:', articleId);
-            // Implementar modal de abertura de artigo
             const modal = document.createElement('div');
             modal.className = 'modal active';
             modal.innerHTML = `
@@ -628,7 +633,6 @@
             `;
             document.body.appendChild(modal);
 
-            // Fetch article details from Firebase
             window.firebaseDB.getDoc(window.firebaseDB.doc(window.firebaseDB.db, 'med-articles', articleId))
                 .then(docSnap => {
                     if (docSnap.exists()) {
