--- a/mania/ecomania-modern.html
+++ b/mania/ecomania-modern.html
@@ -18,6 +18,7 @@
             --perigo: #ff4444;
             --sucesso: #00ff88;
             --texto-claro: #ffffff;
+            --azul-agua: #00a0d1;
         }
 
         * {
@@ -274,6 +275,155 @@
             color: var(--destaque);
         }
 
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(5px);
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+
+        .modal.active {
+            display: block;
+            opacity: 1;
+        }
+
+        .modal-content {
+            background: var(--fundo-card);
+            margin: 5% auto;
+            padding: 0;
+            border: 2px solid var(--destaque);
+            border-radius: 20px;
+            width: 80%;
+            max-width: 800px;
+            position: relative;
+            animation: fadeInDown 0.5s ease;
+        }
+
+        .modal-close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: var(--perigo);
+            color: var(--texto-claro);
+            border: none;
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
+            font-size: 1.2rem;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.3s;
+        }
+
+        .modal-close:hover {
+            transform: scale(1.1);
+        }
+
+        .modal-image {
+            width: 100%;
+            height: 300px;
+            background-size: cover;
+            background-position: center;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+        }
+
+        .modal-body {
+            padding: 2rem;
+        }
+
+        .modal-title {
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 1rem;
+            color: var(--destaque);
+            line-height: 1.3;
+        }
+
+        .modal-meta {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            font-size: 0.9rem;
+            color: var(--texto-claro);
+            opacity: 0.9;
+            margin-bottom: 1.5rem;
+            border-bottom: 1px solid rgba(0, 255, 136, 0.2);
+            padding-bottom: 1rem;
+        }
+
+        .modal-meta span {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .modal-content-text {
+            font-size: 1.1rem;
+            color: var(--texto-claro);
+            line-height: 1.7;
+            margin-bottom: 1.5rem;
+            white-space: pre-wrap; /* Preserve newlines */
+        }
+
+        .modal-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .tag {
+            background: rgba(0, 255, 136, 0.2);
+            color: var(--destaque);
+            padding: 0.3rem 0.8rem;
+            border-radius: 15px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            transition: all 0.3s;
+        }
+
+        .tag:hover {
+            background: var(--destaque);
+            color: var(--fundo);
+        }
+
+        #modalSource p {
+            font-size: 0.95rem;
+            color: var(--dourado);
+        }
+
+        #modalSource a {
+            color: var(--sucesso);
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        #modalSource a:hover {
+            text-decoration: underline;
+        }
+
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
@@ -294,6 +444,23 @@
 
             .articles-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .modal-content {
+                width: 90%;
+                margin: 2rem auto;
+            }
+
+            .modal-image {
+                height: 200px;
+            }
+
+            .modal-body {
+                padding: 1.5rem;
+            }
+
+            .modal-title {
+                font-size: 1.8rem;
             }
         }
     </style>
@@ -330,7 +497,7 @@
                     <i class="fas fa-search"></i>
                 </button>
             </div>
-            
+
             <select class="filter-select" id="categoryFilter" onchange="filterArticles()">
                 <option value="">Todas as categorias</option>
                 <option value="sustentabilidade">🌱 Sustentabilidade</option>
@@ -366,6 +533,29 @@
             <p>Tente ajustar os filtros de pesquisa.</p>
         </div>
     </div>
+
+    <!-- Modal Structure (initially hidden) -->
+    <div id="articleModal" class="modal">
+        <div class="modal-content">
+            <button class="modal-close" onclick="closeModal()">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="modal-image" id="modalImage"></div>
+            <div class="modal-body">
+                <h2 class="modal-title" id="modalTitle"></h2>
+                <div class="modal-meta">
+                    <span><i class="fas fa-user"></i> <span id="modalAuthor"></span></span>
+                    <span><i class="fas fa-calendar"></i> <span id="modalDate"></span></span>
+                    <span><i class="fas fa-eye"></i> <span id="modalViews"></span> visualizações</span>
+                    <span><i class="fas fa-heart"></i> <span id="modalLikes"></span> curtidas</span>
+                </div>
+                <div class="modal-content-text" id="modalContent"></div>
+                <div class="modal-tags" id="modalTags"></div>
+                <div id="modalSource" style="margin-top: 1rem;"></div>
+            </div>
+        </div>
+    </div>
+
 
     <script type="module">
         import '/firebase-config.js';
@@ -417,9 +607,15 @@
 
             articlesGrid.innerHTML = filteredArticles.map(article => `
                 <div class="article-card" onclick="openModal('${article.id}')">
-                    <div class="article-image" style="background-image: url('${article.imageUrl || '/icon/fatomania.png'}')">
-                        <div class="article-category">${getCategoryIcon(article.category)} ${article.category}</div>
-                    </div>
+                    ${article.imageUrl ? `
+                        <div class="article-image" style="background-image: url('${article.imageUrl}')">
+                            <span class="article-category">${getCategoryLabel(article.category)}</span>
+                        </div>
+                    ` : `
+                        <div class="article-image" style="background: linear-gradient(135deg, var(--verde) 0%, var(--azul-agua) 100%);">
+                            <span class="article-category">${getCategoryLabel(article.category)}</span>
+                        </div>
+                    `}
                     <div class="article-content">
                         <h3 class="article-title">${article.title}</h3>
                         <p class="article-summary">${article.summary}</p>
@@ -438,19 +634,20 @@
             `).join('');
         }
 
-        function getCategoryIcon(category) {
-            const icons = {
-                'sustentabilidade': '🌱',
-                'energia-renovavel': '⚡',
-                'conservacao': '🌿',
-                'clima': '🌡️',
-                'biodiversidade': '🦋',
-                'reciclagem': '♻️',
-                'agua': '💧',
-                'floresta': '🌳'
+        function getCategoryLabel(category) {
+            const labels = {
+                'sustentabilidade': '🌱 Sustentabilidade',
+                'energia-renovavel': '⚡ Energia Renovável',
+                'conservacao': '🌿 Conservação',
+                'clima': '🌡️ Mudanças Climáticas',
+                'biodiversidade': '🦋 Biodiversidade',
+                'reciclagem': '♻️ Reciclagem',
+                'agua': '💧 Recursos Hídricos',
+                'floresta': '🌳 Florestas'
             };
-            return icons[category] || '🌍';
+            return labels[category] || '🌍 Categoria';
         }
+
 
         function searchArticles() {
             filterAndSort();
@@ -523,33 +720,7 @@
 
         function showArticleModal(article) {
             let modal = document.getElementById('articleModal');
-            if (!modal) {
-                modal = document.createElement('div');
-                modal.id = 'articleModal';
-                modal.className = 'modal';
-                modal.innerHTML = `
-                    <div class="modal-content">
-                        <button class="modal-close" onclick="closeModal()">
-                            <i class="fas fa-times"></i>
-                        </button>
-                        <div class="modal-image" id="modalImage"></div>
-                        <div class="modal-body">
-                            <h2 class="modal-title" id="modalTitle"></h2>
-                            <div class="modal-meta">
-                                <span><i class="fas fa-user"></i> <span id="modalAuthor"></span></span>
-                                <span><i class="fas fa-calendar"></i> <span id="modalDate"></span></span>
-                                <span><i class="fas fa-eye"></i> <span id="modalViews"></span> visualizações</span>
-                                <span><i class="fas fa-heart"></i> <span id="modalLikes"></span> curtidas</span>
-                            </div>
-                            <div class="modal-content-text" id="modalContent"></div>
-                            <div class="modal-tags" id="modalTags"></div>
-                            <div id="modalSource" style="margin-top: 1rem;"></div>
-                        </div>
-                    </div>
-                `;
-                document.body.appendChild(modal);
-            }
-
+            
             document.getElementById('modalTitle').textContent = article.title || 'Título Indisponível';
             document.getElementById('modalAuthor').textContent = article.author || 'Anônimo';
             document.getElementById('modalDate').textContent = formatDate(article.createdAt);
@@ -604,12 +775,18 @@
             }
         }
 
+        // Placeholder for toggleFavorites, assuming it's defined elsewhere or not critical for this fix
+        function toggleFavorites() {
+            console.log("Função toggleFavorites chamada (implementação não fornecida neste contexto).");
+        }
+
         // Global functions
         window.openModal = openModal;
         window.closeModal = closeModal;
         window.searchArticles = searchArticles;
         window.filterArticles = filterArticles;
         window.sortArticles = sortArticles;
+        window.toggleFavorites = toggleFavorites; // Exporting placeholder
 
         // Search on enter
         document.getElementById('searchInput').addEventListener('keypress', function(e) {
