--- a/mania/misticmania-modern.html
+++ b/mania/misticmania-modern.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -19,6 +18,7 @@
             --perigo: #e74c3c;
             --sucesso: #27ae60;
             --texto-claro: #ecf0f1;
+            --dourado: #f39c12; /* Adicionado para uso específico */
         }
 
         * {
@@ -450,7 +450,7 @@
                     <i class="fas fa-search"></i>
                 </button>
             </div>
-            
+
             <select class="filter-select" id="categoryFilter" onchange="filterArticles()">
                 <option value="">Todas as categorias</option>
                 <option value="paranormal">👻 Paranormal</option>
@@ -550,10 +550,17 @@
 
             articlesGrid.innerHTML = filteredArticles.map(article => `
                 <div class="article-card" onclick="openArticle('${article.id}')">
-                    <div class="article-image" style="background-image: url('${article.imageUrl || 'https://images.unsplash.com/photo-1518709268805-4e9042af2176?w=800'}')">
-                        <div class="article-category">${getCategoryIcon(article.category)} ${article.category}</div>
-                        <div class="mystery-level">${getMysteryLevel(article.mysteryLevel)}</div>
-                    </div>
+                    ${article.imageUrl ? `
+                        <div class="article-image" style="background-image: url('${article.imageUrl}')">
+                            <div class="article-category">${getCategoryIcon(article.category)} ${article.category}</div>
+                            <div class="mystery-level">${getMysteryLevel(article.mysteryLevel)}</div>
+                        </div>
+                    ` : `
+                        <div class="article-image" style="background: linear-gradient(135deg, var(--destaque) 0%, var(--dourado) 100%);">
+                            <div class="article-category">${getCategoryIcon(article.category)} ${article.category}</div>
+                            <div class="mystery-level">${getMysteryLevel(article.mysteryLevel)}</div>
+                        </div>
+                    `}
                     <div class="article-content">
                         <h3 class="article-title">${article.title}</h3>
                         <p class="article-summary">${article.summary}</p>
